--- a/themes/blist/layouts/partials/header.html
+++ b/themes/blist/layouts/partials/header.html
@@ -44,7 +44,7 @@
         class="language-dropdown absolute top-full mt-2 left-0 flex-col gap-2 bg-gray-100 dark:bg-gray-900 dark:text-white z-10 hidden">
         {{ range .Site.Languages }}
         {{ if not (eq .Lang $.Site.Language.Lang) }}
-        <a class="px-3 py-2 hover:bg-gray-200 dark:hover:bg-gray-700" href="/{{ .Lang }}" lang="{{ .Lang }}">{{ default .Lang .LanguageName }}</a>
+        <a class="px-3 py-2 hover:bg-gray-200 dark:hover:bg-gray-700" href="/labveilletech/{{ .Lang }}" lang="{{ .Lang }}">{{ default .Lang .LanguageName }}</a>
         {{ end }}
         {{ end }}
       </div>
