--- a/themes/blist/assets/css/styles.css
+++ b/themes/blist/assets/css/styles.css
@@ -58,3 +58,9 @@
   --tw-bg-opacity: 1;
   background-color: rgba(30,30,30,var(--tw-bg-opacity)) !important;
 }
+
+.dark .dark\:bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255,255,255,var(--tw-bg-opacity)) !important;
+  color: #333 !important;
+}
